# pyGCS

./: .gitignore  README.md  setup.cfg
src/pyGCS/: GCI.py  GCS.py  __init__.py
tests/: test_GCI.py  test_GCS.py
