[metadata]
name = pyGCS
version = 0.2.4
author = Tom-Robin Teschner
author_email = tomrobin.teschner@yahoo.de
description = A package to establish grid independent results for numerical analysis on computational grids.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tomrobin-teschner/pyGCS
project_urls =
    Bug Tracker = https://github.com/tomrobin-teschner/pyGCS/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src